# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
#

2004-12-20 21:05:56 GMT	John Goerzen <jgoerzen@complete.org>	patch-107

    Summary:
      Checkpointing (compiles)
    Revision:
      missingh--head--0.7--patch-107


    modified files:
     ChangeLog libsrc/MissingH/IO/HVFS/InstanceHelpers.hs


2004-12-20 20:54:54 GMT	John Goerzen <jgoerzen@complete.org>	patch-106

    Summary:
      Checkpointing, compiles
    Revision:
      missingh--head--0.7--patch-106


    modified files:
     ChangeLog libsrc/MissingH/IO/HVFS.hs
     libsrc/MissingH/IO/HVFS/InstanceHelpers.hs


2004-12-20 20:44:29 GMT	John Goerzen <jgoerzen@complete.org>	patch-105

    Summary:
      Checkpointing (compiles)
    Revision:
      missingh--head--0.7--patch-105


    modified files:
     ChangeLog libsrc/MissingH/IO/HVFS/InstanceHelpers.hs


2004-12-20 20:18:45 GMT	John Goerzen <jgoerzen@complete.org>	patch-104

    Summary:
      added secureAbsNormPath
    Revision:
      missingh--head--0.7--patch-104


    new files:
     libsrc/MissingH/Path/.arch-ids/=id
     libsrc/MissingH/Path/NameManip.hs

    modified files:
     ChangeLog libsrc/MissingH/Path.hs testsrc/Pathtest.hs

    new directories:
     libsrc/MissingH/Path libsrc/MissingH/Path/.arch-ids


2004-12-20 19:49:23 GMT	John Goerzen <jgoerzen@complete.org>	patch-103

    Summary:
      Updated changelog
    Revision:
      missingh--head--0.7--patch-103


    modified files:
     ChangeLog debian/changelog


2004-12-20 19:46:55 GMT	John Goerzen <jgoerzen@complete.org>	patch-102

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-102


    modified files:
     COPYRIGHT ChangeLog libsrc/MissingH/IO/HVFS/InstanceHelpers.hs


2004-12-20 17:29:47 GMT	John Goerzen <jgoerzen@complete.org>	patch-101

    Summary:
      Completed MemoryBuffer tests
    Revision:
      missingh--head--0.7--patch-101

